--- a/kubernetes/infrastructure/ingress/internal.yaml
+++ b/kubernetes/infrastructure/ingress/internal.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
   name: ingress-nginx-internal
 ---
 apiVersion: v1
@@ -12,9 +12,9 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-internal
   namespace: ingress-nginx-internal
@@ -24,9 +24,9 @@ kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission
   namespace: ingress-nginx-internal
@@ -36,11 +36,11 @@ kind: Role
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
-  name: ingress-nginx
+  name: ingress-nginx-internal
   namespace: ingress-nginx-internal
 rules:
 - apiGroups:
@@ -133,9 +133,9 @@ kind: Role
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission
   namespace: ingress-nginx-internal
@@ -152,11 +152,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
-  name: ingress-nginx
+  name: ingress-nginx-internal
 rules:
 - apiGroups:
   - ""
@@ -226,9 +226,9 @@ kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission
 rules:
@@ -245,16 +245,16 @@ kind: RoleBinding
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
-  name: ingress-nginx
+  name: ingress-nginx-internal
   namespace: ingress-nginx-internal
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: ingress-nginx
+  name: ingress-nginx-internal
 subjects:
 - kind: ServiceAccount
   name: ingress-nginx-internal
@@ -265,9 +265,9 @@ kind: RoleBinding
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission
   namespace: ingress-nginx-internal
@@ -284,15 +284,15 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   labels:
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
-  name: ingress-nginx
+  name: ingress-nginx-internal
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: ingress-nginx
+  name: ingress-nginx-internal
 subjects:
 - kind: ServiceAccount
   name: ingress-nginx-internal
@@ -303,9 +303,9 @@ kind: ClusterRoleBinding
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission
 roleRef:
@@ -324,9 +324,9 @@ kind: ConfigMap
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-controller
   namespace: ingress-nginx-internal
@@ -336,9 +336,9 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-controller
   namespace: ingress-nginx-internal
@@ -357,8 +357,8 @@ spec:
     targetPort: https
   selector:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
   type: LoadBalancer
 ---
 apiVersion: v1
@@ -366,9 +366,9 @@ kind: Service
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-controller-admission
   namespace: ingress-nginx-internal
@@ -380,8 +380,8 @@ spec:
     targetPort: webhook
   selector:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
   type: ClusterIP
 ---
 apiVersion: apps/v1
@@ -389,9 +389,9 @@ kind: Deployment
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-controller
   namespace: ingress-nginx-internal
@@ -401,21 +401,21 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/component: controller
-      app.kubernetes.io/instance: ingress-nginx
-      app.kubernetes.io/name: ingress-nginx
+      app.kubernetes.io/instance: ingress-nginx-internal
+      app.kubernetes.io/name: ingress-nginx-internal
   template:
     metadata:
       labels:
         app.kubernetes.io/component: controller
-        app.kubernetes.io/instance: ingress-nginx
-        app.kubernetes.io/name: ingress-nginx
+        app.kubernetes.io/instance: ingress-nginx-internal
+        app.kubernetes.io/name: ingress-nginx-internal
     spec:
       containers:
       - args:
         - /nginx-ingress-controller
         - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
         - --election-id=ingress-controller-leader
-        - --controller-class=k8s.io/ingress-nginx
+        - --controller-class=k8s.io/ingress-nginx-internal
         - --ingress-class=nginx-internal
         - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
         - --validating-webhook=:8443
@@ -501,9 +501,9 @@ kind: Job
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission-create
   namespace: ingress-nginx-internal
@@ -512,9 +512,9 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/component: admission-webhook
-        app.kubernetes.io/instance: ingress-nginx
-        app.kubernetes.io/name: ingress-nginx
-        app.kubernetes.io/part-of: ingress-nginx
+        app.kubernetes.io/instance: ingress-nginx-internal
+        app.kubernetes.io/name: ingress-nginx-internal
+        app.kubernetes.io/part-of: ingress-nginx-internal
         app.kubernetes.io/version: 1.3.0
       name: ingress-nginx-admission-create
     spec:
@@ -548,9 +548,9 @@ kind: Job
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission-patch
   namespace: ingress-nginx-internal
@@ -559,9 +559,9 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/component: admission-webhook
-        app.kubernetes.io/instance: ingress-nginx
-        app.kubernetes.io/name: ingress-nginx
-        app.kubernetes.io/part-of: ingress-nginx
+        app.kubernetes.io/instance: ingress-nginx-internal
+        app.kubernetes.io/name: ingress-nginx-internal
+        app.kubernetes.io/part-of: ingress-nginx-internal
         app.kubernetes.io/version: 1.3.0
       name: ingress-nginx-admission-patch
     spec:
@@ -597,22 +597,22 @@ kind: IngressClass
 metadata:
   labels:
     app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: nginx
 spec:
-  controller: k8s.io/ingress-nginx
+  controller: k8s.io/ingress-nginx-internal
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   labels:
     app.kubernetes.io/component: admission-webhook
-    app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/name: ingress-nginx
-    app.kubernetes.io/part-of: ingress-nginx
+    app.kubernetes.io/instance: ingress-nginx-internal
+    app.kubernetes.io/name: ingress-nginx-internal
+    app.kubernetes.io/part-of: ingress-nginx-internal
     app.kubernetes.io/version: 1.3.0
   name: ingress-nginx-admission
 webhooks:
