--- a/kubernetes/monitor/mikrotik/config/kustomization.yaml
+++ b/kubernetes/monitor/mikrotik/config/kustomization.yaml
@@ -2,8 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - mikrotik/ks.yaml
-  - otel/ks.yaml
-  - prometheus/ks.yaml
-  - splunk/ks.yaml
-  - splunk-syslog/ks.yaml
+  - config.yaml
+  - mikrotik.yaml
+  - scraper.yaml
