--- a/kubernetes/monitor/prometheus/app/helm-release.yaml
+++ b/kubernetes/monitor/prometheus/app/helm-release.yaml
@@ -67,6 +67,14 @@ spec:
               editable: true
               options:
                 path: /var/lib/grafana/dashboards/grafana-dashboards-kubernetes
+            - name: grafana-dashboards-mikrotik
+              orgId: 1
+              folder: Mikrotik
+              type: file
+              disableDeletion: true
+              editable: true
+              options:
+                path: /var/lib/grafana/dashboards/grafana-dashboards-mikrotik
             - name: grafana-dashboards-nginx
               orgId: 1
               folder: Nginx
@@ -95,6 +103,13 @@ spec:
             url: https://raw.githubusercontent.com/dotdc/grafana-dashboards-kubernetes/master/dashboards/k8s-views-nodes.json
           k8s-views-pods:
             url: https://raw.githubusercontent.com/dotdc/grafana-dashboards-kubernetes/master/dashboards/k8s-views-pods.json
+        grafana-dashboards-mikrotik:
+          mikrotik-mktxp-exporter:
+            gnetId: 13679
+            revision: 20
+            datasource:
+              - name: DS_PROMETHEUS
+                value: Prometheus
         grafana-dashboards-nginx:
           nginx-controller:
             url: https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/grafana/dashboards/nginx.json
@@ -204,6 +219,7 @@ spec:
         # discover resources in non "monitor" namespaces
         serviceMonitorSelectorNilUsesHelmValues: false
         podMonitorSelectorNilUsesHelmValues: false
+        scrapeConfigSelectorNilUsesHelmValues: false
 
         thanos:
           image: quay.io/thanos/thanos:v0.31.0
