--- a/kubernetes/clusters/repositories/kustomization.yaml
+++ b/kubernetes/clusters/repositories/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - angelnu-charts.yaml
   - external-secrets.yaml
   - ingress-nginx.yaml
+  - jetstack.yaml
   - prometheus-community.yaml
   - reloader.yaml
   - splunk-operator.yaml
