--- a/kubernetes/infrastructure/cert-manager/ks.yaml
+++ b/kubernetes/infrastructure/cert-manager/ks.yaml
@@ -2,10 +2,30 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: infrastructure-cert-manager
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: namespaces
+    - name: repositories
+  interval: 1h
+  path: ./kubernetes/infrastructure/cert-manager/app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  timeout: 5m0s
+  wait: true
+---
+# yaml-language-server: $schema=../../../schemas/kustomization_v1.json
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: infrastructure-cert-manager-config
   namespace: flux-system
 spec:
   dependsOn:
+    - name: infrastructure-cert-manager
     - name: infrastructure-external-secrets-stores
   # additional inheritance from other dependencies:
   # - cluster-settings
